--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "node_simple-crud",
+  "name": "crud_node-simple-back",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
