--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "crud_node-simple-back",
+  "name": "crud_node-backend",
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
